--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,118 @@
 alembic==1.12.0
 annotated-types==0.5.0
 anyio==3.7.1
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asn1crypto==1.5.1
+attrs==23.1.0
 bcrypt==4.0.1
-certifi==2023.7.22
+bip-utils==2.7.1
+blockfrost-python==0.5.3
+build==0.10.0
+CacheControl==0.12.14
+cbor2==5.4.6
+certifi==2023.5.7
+certvalidator==0.11.1
 cffi==1.15.1
+charset-normalizer==3.2.0
+cleo==2.0.1
 click==8.1.7
-cryptography==41.0.3
-dnspython==2.4.2
+coincurve==17.0.0
+cose==0.9.dev8
+crashtest==0.4.1
+crcmod==1.7
+cryptography==41.0.2
+distlib==0.3.7
+dnspython==2.4.1
+dulwich==0.21.5
 ecdsa==0.18.0
+ECPy==1.2.5
+ed25519-blake2b==1.4
 email-validator==2.0.0.post2
-exceptiongroup==1.1.3
-fastapi==0.103.1
+exceptiongroup==1.1.2
+fastapi==0.100.1
+filelock==3.12.2
+frozendict==2.3.8
+frozenlist==1.4.0
 greenlet==2.0.2
 h11==0.14.0
+html5lib==1.1
 httpcore==0.17.3
 httptools==0.6.0
 httpx==0.24.1
 idna==3.4
+importlib-metadata==6.8.0
+iniconfig==2.0.0
+installer==0.7.0
 itsdangerous==2.1.2
+jaraco.classes==3.3.0
 Jinja2==3.1.2
+jsonschema==4.18.4
+jsonschema-specifications==2023.7.1
+keyring==23.13.1
+lockfile==0.12.2
 Mako==1.2.4
 MarkupSafe==2.1.3
+mnemonic==0.20
+more-itertools==9.1.0
+msgpack==1.0.5
 orjson==3.9.6
+oscrypto==1.3.0
+packaging==23.1
 passlib==1.7.4
-psycopg2-binary==2.9.7
+pexpect==4.8.0
+pkginfo==1.9.6
+platformdirs==3.9.1
+pluggy==1.2.0
+poetry==1.5.1
+poetry-core==1.6.1
+poetry-plugin-export==1.4.0
+pprintpp==0.4.0
+psycopg2-binary==2.9.6
+ptyprocess==0.7.0
+py-crypto-hd-wallet==1.3.0
+py-sr25519-bindings==0.2.0
 pyasn1==0.5.0
+pycardano==0.9.0
 pycparser==2.21
-pydantic==2.3.0
+pycryptodome==3.18.0
+pydantic==2.1.1
 pydantic-extra-types==2.1.0
-pydantic-settings==2.0.3
-pydantic_core==2.6.3
+pydantic-settings==2.0.2
+pydantic_core==2.4.0
+PyNaCl==1.5.0
+pyproject_hooks==1.0.0
+pytest==7.4.0
 python-dotenv==1.0.0
 python-jose==3.3.0
 python-multipart==0.0.6
+pytz==2023.3
 PyYAML==6.0.1
+rapidfuzz==2.15.1
+referencing==0.30.0
+regex==2023.6.3
+requests==2.31.0
+requests-toolbelt==1.0.0
+rpds-py==0.9.2
 rsa==4.9
+shellingham==1.5.0.post1
 six==1.16.0
 sniffio==1.3.0
-SQLAlchemy==2.0.20
+SQLAlchemy==2.0.19
 starlette==0.27.0
+tomli==2.0.1
+tomlkit==0.11.8
+trove-classifiers==2023.7.6
+typeguard==2.13.3
 typing_extensions==4.7.1
 ujson==5.8.0
+urllib3==1.26.16
 uvicorn==0.23.2
 uvloop==0.17.0
+virtualenv==20.24.1
 watchfiles==0.20.0
+webencodings==0.5.1
+websocket-client==1.6.1
 websockets==11.0.3
+xattr==0.10.1
+zipp==3.16.2
