--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -8,5 +8,11 @@ jobs:
     steps:
       - name: Pulling git repo
         uses: actions/checkout@v4
-      - name: Say hi to me
-        run: echo "Hi Matthew"
+      - name: Installing Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - name: Update pip
+        run: python -m pip install --upgrade pip
+      - name: Install dependencies
+        run: pip install -r requirements.txt
