--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -3,7 +3,7 @@ name: Build and deploy code
 on: push
 
 jobs: 
-  job1:
+  build:
     environment: 
       name: Testing
     env:
@@ -47,29 +47,12 @@ jobs:
           pip install pytest
           pytest -v
 
-      - name: Install doctl
-        uses: digitalocean/action-doctl@v2
-        with:
-          token: $${{ secrets.DIGITALOCEAN_TOKEN }}
+  deploy:
+    needs: [build]
+    environment:
+      name: Production
 
-      - name: Publish to Digital Ocean Container Registry
-        uses: ripplr-io/docr-docker-publish@v1
-        with:
-          image_path: registry.digitalocean.com/fastapi-tutorial
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi:latest
-          cache-from: type=registry,ref=user/app:buildcache
-          cache-to: type=registry,ref=user/app:buildcache,mode=max
+    runs-on: ubuntu-latest
+    steps:
+      - name: deploying stuff
+        run: echo "going to deploy some stuff"
